--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "test": "echo \"No tests yet...\""
   },
   "dependencies": {
+    "apollo-server-azure-functions": "^3.13.0",
+    "graphql": "^16.8.1",
     "joi": "^17.12.3",
     "lodash": "^4.17.21",
     "mongoose": "^8.3.1",
